kubernetes/tekton-resources/demo/gatekeeper-signing-checker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-signing-checker
  namespace: gatekeeper
  labels:
    name: gatekeeper-signing-checker
spec:
  selector:
    matchLabels:
      run: gatekeeper-signing-checker
  replicas: 1
  template:
    metadata:
      labels:
        run: gatekeeper-signing-checker
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: gatekeeper-signing-checker
        image: ghcr.io/mlieberman85/main.go-7ddfb3e035b42cd70649cc33393fe32c:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - containerPort: 8085
        volumeMounts:
        - name: keys
          mountPath: "/tmp/keys"
          readOnly: true
      volumes:
        - name: keys
          configMap:
            name: key-map
            items:
            - key: "horismos_config"
              path: "horismos.yaml"
            - key: "image"
              path: "cosign.pub"
            - key: "sbom.sources"
              path: "cosign.sbom.pub"
